packages/kununu-header/index.scss
@import '~kununu-theme/scss/base/variables';

.header {
  background-color: $teal;
  color: $white;
  max-height: 60px;

  &.fixed {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
  }
}

.title {
  color: $gray-light;
  font-size: 12px;
  line-height: 18px;
  padding-left: 15px;
  padding: 15px 0  15px 20px;

  @media (max-width: $screen-sm-max) {
    display: none;
  }
}

.pullLeft,
.pullRight,
.flex {
  display: flex;
  align-items: center;
  flex-grow: 1;
}

.pullLeft {
  float: left;
}

.pullRight {
  float: right;
  justify-content: flex-end;
}

.headerNav {
  font-weight: $font-weight-semibold;
  text-transform: uppercase;
  font-size: $font-size-sm;

  i {
    @media (max-width: $screen-sm-min) {
      font-size: 21px;
    }

    @media (max-width: $screen-xs-min) {
      font-size: $font-size-lg;
    }
  }

  ul {
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
  }

  li {
    list-style-type: none;
    display: inline-block;

    &:not(:first-child) {
      padding-left: 20px;
    }
  }

  a {
    color: inherit;
    text-decoration: none;

    &:hover {
      text-decoration: none;
      color: inherit;
    }
  }
}

